--- a/android/build.gradle
+++ b/android/build.gradle
@@ -8,7 +8,7 @@ buildscript {
         maven { url 'http://download.flutter.io' }
         maven { url "https://oss.sonatype.org/content/groups/public" }
         maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
-        maven { url "https://dl.bintray.com/aweme-open-sdk-team/public" }
+        // maven { url "https://dl.bintray.com/aweme-open-sdk-team/public" }
         maven { url 'http://developer.huawei.com/repo/' }
     }
 
@@ -24,7 +24,7 @@ rootProject.allprojects {
         maven { url 'http://download.flutter.io' }
         maven { url "https://oss.sonatype.org/content/groups/public" }
         maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
-        maven { url "https://dl.bintray.com/aweme-open-sdk-team/public" }
+        // maven { url "https://dl.bintray.com/aweme-open-sdk-team/public" }
         maven { url 'http://developer.huawei.com/repo/' }
     }
 }
